Fix for bug #102308. Changed InitWithPath to InitWithUnicodePath. Also changed !NS_SUCCEEDED to NS_FAILED